# microgpt-experiments

./: .gitignore  README.md  config.py  main.py  model.py  pyproject.toml  train.py
backends/: __init__.py  numpy_backend.py  python_backend.py
backends/numpy_backend/: __init__.py  numpy_base.py  numpy_batched.py  numpy_sequential.py  sequential_with_numba.py  sequential_without_numba.py  shared.py
backends/pytorch_backend/: __init__.py  forward.py  inference.py  pytorch_backend.py  shared.py
configs/: alice.json  alice_v2.json  names.json
docs/: architecture.md
scripts/: benchmark_train.py  download_alice.py  verify_numba_jit.py
tests/: test_backends.py  test_inference.py  test_model.py
