[project]
name = "microgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.5",
]

[project.optional-dependencies]
numpy = ["numpy>=2.0", "numba>=0.60", "scipy>=1.14"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
